Bug 91418 - Visual Studio 2015 vsnprintf build error
Summary: Visual Studio 2015 vsnprintf build error
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-21 23:20 UTC by Vinson Lee
Modified: 2015-07-23 15:00 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2015-07-21 23:20:03 UTC
mesa: 4c7196b684fe384599c1a02bf20aec7b6447968d (master 10.7.0-devel)

Visual Studio 2015 build error

u_snprintf.c
Windows Kits\10\include\10.0.10150.0\ucrt\stdio.h(1419): warning C4005: 'vsnprintf': macro redefinition
src\gallium\auxiliary\util\u_snprintf.c(171): note: see previous definition of 'vsnprintf'
Windows Kits\10\include\10.0.10150.0\ucrt\stdio.h(1421): fatal error C1189: #error:  Macro definition of vsnprintf conflicts with Standard Library function declaration
Comment 1 Jose Fonseca 2015-07-23 15:00:43 UTC
Should be fixed with c6267ebd6c8a73d51a0c82d0f516177c70e05c81.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.